--- a/Diplomapp/Diplomapp/Diplomapp.Android/Diplomapp.Android.csproj
+++ b/Diplomapp/Diplomapp/Diplomapp.Android/Diplomapp.Android.csproj
@@ -39,7 +39,7 @@
     <EnableLLVM>false</EnableLLVM>
     <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
     <BundleAssemblies>false</BundleAssemblies>
-    <AndroidTlsProvider>btls</AndroidTlsProvider>
+    <AndroidTlsProvider>legacy</AndroidTlsProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
